# backend-coding-challenge

./: .dev.env  .dev.env.sample  .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  DOCS.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  build.gradle.kts  case_definition.md  config.py  db.sqlite3  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  manage.py  pom.xml  pyproject.toml  rabbitmq.conf  requirements.txt
backend/: .env  alembic.ini  conftest.py  core_injector.py  dummy_data.py  enviroment.py  logger.py  pyproject.toml  ruff.toml  server.py  utils.py
backend/api/enpoints/: interfaces.py
backend/api/enpoints/movie/: movie_endpoints.py
backend/api/enpoints/rating/: rating_endpoints.py
backend/api/enpoints/user/: user_endpoints.py
backend/api/interactors/: movies_interactor.py  ratings_interactor.py  user_interactor.py
backend/api/models/request_models/: movie_info_requests.py  rating_requests.py  user_requests.py
backend/api/models/response_models/: base_response.py  (+4 more)
backend/api/tests/: test_movie_endpoints.py  test_rating_endpoints.py  test_user_endpoints.py
backend/domain_models/: base_model.py  movie_info.py  rating_info.py  rating_report.py  user_info.py
backend/repository/: assembly.py  repository_utils.py  unit_of_work.py
backend/repository/adapter/: __init__.py
backend/repository/interfaces/: movie_repository.py  rating_repository.py  user_repository.py
backend/repository/models/: __init__.py  movie_info.py  rating_info.py  rating_report.py  user_info.py
backend/repository/tests/: test__movie_info_repository.py  test__rating_info_repository.py  test__user_info_repository.py
(+188 files in other folders)
